--- a/Application.Desktop/OrderWindow.xaml
+++ b/Application.Desktop/OrderWindow.xaml
@@ -16,7 +16,7 @@
             <Label>Выберите тур</Label>
             <ComboBox x:Name="Tour_cb" ></ComboBox>
             <Label>Выберите транспорт</Label>
-            <ComboBox x:Name="Transport_cb" DisplayMemberPath="TypeOfTransport"></ComboBox>
+            <ComboBox x:Name="Transport_cb"></ComboBox>
             <Button Click="Button_Click" Style="{DynamicResource buttonFind}" Margin="0,20,0,0">Оставить заявку</Button>
         </StackPanel>
     </Grid>
