--- a/Application.MobileClient/Application.MobileClient/AuthorizationPage.xaml
+++ b/Application.MobileClient/Application.MobileClient/AuthorizationPage.xaml
@@ -4,7 +4,7 @@
              x:Class="Application.MobileClient.AuthorizationPage">
     <StackLayout Orientation="Vertical" Grid.Row="1" >
         <StackLayout  Spacing="8" Orientation="Horizontal">
-            <Button x:Name="regbtn" Text="Войти" TextColor="Black" Margin="0,5,0,0" Background="Plum" Clicked="regbtn_Clicked"/>
+            <Button x:Name="regbtn" Text="Зарегистрироваться" TextColor="Black" Margin="0,5,0,0" Background="Plum" Clicked="regbtn_Clicked"/>
         </StackLayout>
         <Label x:Name="regLabel" Text="Войдите в аккаунт" FontSize="Large" TextColor="Black" HorizontalOptions="Center" Margin="0,10,0,0"/>
         <Entry x:Name="login" Placeholder="Логин" TextColor="Black" PlaceholderColor="Black" Margin="0,5,0,0"/>
